--- a/industry.ipynb
+++ b/industry.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 20,
    "id": "b5053275",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 21,
    "id": "b54adf07",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 22,
    "id": "cb78589e",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 23,
    "id": "6fcc4999",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        " 'steel.data_wire_time.csv']"
       ]
      },
-     "execution_count": 510,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 24,
    "id": "f442ecc3",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 25,
    "id": "bf87ab51",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 26,
    "id": "f5b81e94",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "6          None  "
       ]
      },
-     "execution_count": 513,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 27,
    "id": "44de0c08",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 28,
    "id": "5be947c3",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 29,
    "id": "7697987c",
    "metadata": {
     "scrolled": false
@@ -732,7 +732,7 @@
        "max     3241.000000      3.731596       2.676388"
       ]
      },
-     "execution_count": 516,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 30,
    "id": "dd8a99dd",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 31,
    "id": "5f5134c7",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "9781  2116  00:44:48  00:46:37     0.495782    -715.504924"
       ]
      },
-     "execution_count": 518,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 32,
    "id": "4204f549",
    "metadata": {},
    "outputs": [],
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 33,
    "id": "9d874d31",
    "metadata": {},
    "outputs": [],
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 34,
    "id": "9085de54",
    "metadata": {},
    "outputs": [],
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 35,
    "id": "56aabc6d",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1021,7 @@
        "max        86375.000000    86398.000000        907.000000"
       ]
      },
-     "execution_count": 522,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,18 +1033,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 36,
    "id": "0e0ddf3f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# сагрегируем признаки по номеру партии\n",
-    "data_arc = data_arc.groupby('key').agg({'ActivePower': 'sum', 'ReactivePower': 'sum', 'DeltaHeatSeconds': 'sum', 'TotalPower': 'sum', 'RelPower': 'sum', 'BeginHeat': 'count'})"
+    "data_arc = data_arc.groupby('key').agg({'ActivePower': 'sum', 'ReactivePower': 'sum', 'BeginHeatSeconds': 'min', 'EndHeatSeconds': 'max', 'DeltaHeatSeconds': 'sum', 'TotalPower': 'sum', 'RelPower': 'sum', 'BeginHeat': 'count'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 37,
    "id": "102fff8d",
    "metadata": {},
    "outputs": [
@@ -1054,17 +1054,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 3214 entries, 1 to 3241\n",
-      "Data columns (total 6 columns):\n",
+      "Data columns (total 8 columns):\n",
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
       " 0   ActivePower       3214 non-null   float64\n",
       " 1   ReactivePower     3214 non-null   float64\n",
-      " 2   DeltaHeatSeconds  3214 non-null   int64  \n",
-      " 3   TotalPower        3214 non-null   float64\n",
-      " 4   RelPower          3214 non-null   float64\n",
-      " 5   Iteration         3214 non-null   int64  \n",
-      "dtypes: float64(4), int64(2)\n",
-      "memory usage: 175.8 KB\n"
+      " 2   BeginHeatSeconds  3214 non-null   int64  \n",
+      " 3   EndHeatSeconds    3214 non-null   int64  \n",
+      " 4   DeltaHeatSeconds  3214 non-null   int64  \n",
+      " 5   TotalPower        3214 non-null   float64\n",
+      " 6   RelPower          3214 non-null   float64\n",
+      " 7   Iteration         3214 non-null   int64  \n",
+      "dtypes: float64(4), int64(4)\n",
+      "memory usage: 226.0 KB\n"
      ]
     }
    ],
@@ -1081,6 +1083,8 @@
     "В итоге мы получаем следующую таблицу:\n",
     "* `key` - номер партии;\n",
     "* `ActivePower` - значение активной мощности;\n",
+    "* `BeginHeatSeconds` - время начала нагрева в секундах;\n",
+    "* `EndHeatSeconds` - время завершения нагрева в секундах;\n",
     "* `ReactivePower` - значение реактивной мощности;\n",
     "* `DeltaHeatSeconds` - время нагрува в секундах;\n",
     "* `TotalPower` - сумма мощностей;\n",
@@ -1889,6 +1893,13 @@
    "outputs": [],
    "source": [
     "def get_min_value(row):\n",
+    "    \"\"\"\n",
+    "    Получение минимальной даты\n",
+    "    \n",
+    "    Параметры:\n",
+    "    ----------\n",
+    "    row: Series\n",
+    "    \"\"\"\n",
     "    return np.min(row.values, where=~np.isnan(row.values), initial=86400)\n",
     "\n",
     "def get_max_value(row):\n",
@@ -1917,14 +1928,6 @@
     "data_bulk_time['MinSecond'] = data_bulk_time[colsTime].apply(get_min_value, axis=1)\n",
     "data_bulk_time['MaxSecond'] = data_bulk_time[colsTime].apply(get_max_value, axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12f8893c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
